--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t younggi/multi-server ./server
   - docker build -t younggi/multi-worker ./worker
   # Log in to the docker CLI
-  - echo '$DOCKER_PASSWORD' | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push time to docker hub
   - docker push younggi/multi-client
   - docker push younggi/multi-nginx
